[gd_scene load_steps=3 format=3 uid="uid://8wkkr3k8cxh6"]

[ext_resource type="Script" path="res://pause-manager/examples/scripts/example_pause_menu_scene.gd" id="1_5hwa6"]
[ext_resource type="PackedScene" uid="uid://cd5tolsiqaeo7" path="res://pause-manager/prefabs/pause_manager.tscn" id="2_a4sq0"]

[node name="Example Pause Menu Scene" type="CanvasLayer"]
script = ExtResource("1_5hwa6")

[node name="PauseManager" parent="." instance=ExtResource("2_a4sq0")]

[node name="Title" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "PAUSE MANAGER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause Button" type="Button" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 188.0
offset_right = 64.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
text = "Pause"

[node name="Pause Menu" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -132.0
offset_right = 128.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pause Menu Title" type="Label" parent="Pause Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_right = 128.0
offset_bottom = 64.0
grow_horizontal = 2
text = "PAUSE MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume Button" type="Button" parent="Pause Menu"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -24.0
offset_right = 64.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="Main Scene Button" type="Button" parent="Pause Menu"]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -88.0
offset_right = 64.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
text = "Main Scene"

[connection signal="toggle" from="PauseManager" to="." method="_on_pause_manager_toggle"]
[connection signal="pressed" from="Pause Button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Pause Menu/Resume Button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Pause Menu/Main Scene Button" to="." method="_on_main_scene_button_pressed"]
